--- a/docs/index.css
+++ b/docs/index.css
@@ -7,7 +7,7 @@ html {
   overflow-x: unset;
 }
 body {
-  background-image: url("../img/Image\ -\ EXPORTAR.png");
+  background-image: url("./fundo.png");
   background-color: #fef4de;
 }
 section {
